--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~50.0.0",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-maps": "1.8.0",
-    "firebase": "^10.7.1",
-    "expo-location": "~16.5.5"
+    "react-native-maps": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
